fix(app): text not being shown properly in dark mode

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -143,6 +143,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  color: #fff;
 }
 
 .carousel-nav {
